# tesseract-api-test-with-our-dataset

./: .gitignore
extract_text/: CMakeLists.txt  cer.hpp  hye3.traineddata  levenshtein.cpp  levenshtein.hpp  main.cpp  utils.hpp
extract_text/dat_out/gaussian_noise_no_distorsion/DejaVuSansCondensed-BoldOblique/: orig_out.txt
extract_text/dat_out/gaussian_noise_no_distorsion/DejaVuSerif-Italic/: ocr_out.txt
extract_text/dat_out/gaussian_noise_no_distorsion/DejaVuSerifCondensed-Bold/: orig_out.txt
extract_text/dat_out/gaussian_noise_no_distorsion/DejaVuSerifCondensed-BoldItalic/: ocr_out.txt
extract_text/dat_out/gaussian_noise_no_distorsion/FreeMono-Regular-8975/: orig_out.txt
extract_text/dat_out/gaussian_noise_no_distorsion/FreeMonoOblique/: orig_out.txt
extract_text/dat_out/gaussian_noise_no_distorsion/FreeSerif.otf/: ocr_out.txt
extract_text/dat_out/gaussian_noise_no_distorsion/FreeSerifBoldItalic.otf/: ocr_out.txt
extract_text/dat_out/gaussian_noise_no_distorsion/FreeSerifItalic.otf/: ocr_out.txt
extract_text/dat_out/gaussian_noise_no_distorsion/NotoSansArmenian-Black/: orig_out.txt
extract_text/dat_out/gaussian_noise_no_distorsion/NotoSansArmenian-ExtraBold/: orig_out.txt
extract_text/dat_out/gaussian_noise_no_distorsion/NotoSansArmenian-Regular/: orig_out.txt
extract_text/dat_out/plain_white_no_distorsion/DejaVuSans/: ocr_out.txt
extract_text/dat_out/plain_white_no_distorsion/DejaVuSansCondensed-Oblique/: orig_out.txt
extract_text/dat_out/plain_white_no_distorsion/DejaVuSerif-BoldItalic/: ocr_out.txt
extract_text/dat_out/plain_white_no_distorsion/FreeSans/: ocr_out.txt
extract_text/dat_out/plain_white_no_distorsion/FreeSansBold.otf/: ocr_out.txt
extract_text/dat_out/plain_white_no_distorsion/FreeSerifBold.otf/: orig_out.txt
extract_text/dat_out/plain_white_no_distorsion/FreeSerifItalic/: ocr_out.txt
extract_text/dat_out/plain_white_no_distorsion/FreeSerifItalic.otf/: ocr_out.txt  orig_out.txt
extract_text/dat_out/plain_white_no_distorsion/NotoSansArmenian-Black/: ocr_out.txt
extract_text/dat_out/plain_white_no_distorsion_blur1/DejaVuSans-BoldOblique/: ocr_out.txt
extract_text/dat_out/plain_white_no_distorsion_blur1/DejaVuSans-ExtraLight/: orig_out.txt
extract_text/dat_out/plain_white_no_distorsion_blur1/DejaVuSansCondensed/: orig_out.txt
extract_text/dat_out/plain_white_no_distorsion_blur1/DejaVuSerif/: ocr_out.txt
extract_text/dat_out/plain_white_no_distorsion_blur1/DejaVuSerifCondensed-Bold/: orig_out.txt
extract_text/dat_out/plain_white_no_distorsion_blur1/FreeMono/: orig_out.txt
extract_text/data_input_image_height_24_our_model_out/: wer.xlsx
extract_text/data_input_image_height_24_out/: ocr_error.txt  wer.xlsx
extract_text/data_input_image_height_48_our_model_out/: wer.xlsx
extract_text/data_input_image_height_48_out/: ocr_error.txt  wer.xlsx
extract_text/data_input_image_height_4_out/: .~lock.wer.xlsx#  wer.xlsx
extract_text/data_input_image_height_96_our_model_out/: ocr_error.txt  wer.xlsx
extract_text/data_input_image_height_96_out/: wer.xlsx
extract_text/data_out/: .~lock.wer.xlsx#  wer.xlsx
extract_text/data_out_image_height_24/: .~lock.wer.xlsx#  wer.xlsx
extract_text/data_out_image_height_48/: .~lock.wer.xlsx#
extract_text/data_out_image_height_96/: .~lock.wer.xlsx#  wer.xlsx
extract_text/libxl-4.0.0.0/: changelog.txt
extract_text/libxl-4.0.0.0/include_c/: FormControlA.h  libxl.h
extract_text/libxl-4.0.0.0/php_excel/: excel.c
test/: CMakeLists.txt  main.cpp  wer.hpp
test/data/: 1.tif  1000.gt.txt  1000.tif  1001.tif  1006.tif  1008.gt.txt  1010.gt.txt  1011.tif  1012.tif  1014.tif  1015.tif  1016.gt.txt  1020.tif  1022.gt.txt  1027.tif  1038.tif  1041.gt.txt  1043.tif  1044.gt.txt  1044.tif  1046.gt.txt  1051.gt.txt  1051.tif  1053.gt.txt  1053.tif  106.gt.txt  106.tif  1062.gt.txt  1064.gt.txt  1065.gt.txt  1066.gt.txt  1072.tif  1076.tif  1084.tif  1086.gt.txt  109.gt.txt  1090.gt.txt  1091.gt.txt  1094.tif  1097.gt.txt  (+832 more)
(+36397 files in other folders)
